--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -14,7 +14,7 @@
   <div class="grid md:grid-cols-3 gap-8">
     <div>
       <a routerLink="/mens" aria-label="mens">
-        <img class="h-full w-auto" ngSrc="/img/men-1.jpg" alt="men" width="250" height="600">
+        <img class="h-full w-auto" ngSrc="/img/men.jpg" alt="men" width="250" height="600">
       </a>
     </div>
     <div class="bg-gradient-to-b from-base-300 p-4 md:p-8">
@@ -31,7 +31,7 @@
     </div>
     <div>
       <a routerLink="/womens" aria-label="womens">
-        <img class="h-full w-auto" ngSrc="/img/women-1.jpg" alt="women" width="250" height="600">
+        <img class="h-full w-auto" ngSrc="/img/women.jpg" alt="women" width="250" height="600">
       </a>
     </div>
   </div>
