--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="-mx-4 -mt-8 md:-mx-8">
   
   <div class="slider h-[200px] md:h-[500px] mb-4 md:mb-8">
-    <img class="h-full w-auto" class="absolute z-5" [ngSrc]="images[currentImageIndex()]" width="3000" height="500" priority />
+    <img class="h-full w-auto" class="absolute z-5" [ngSrc]="images[currentImageIndex()]" width="3000" height="500" priority alt="display"/>
     <div class="absolute z-5 top-[100px] md:top-[50%] left-[50%] md:left-[200px] translate-y-[-50%] translate-x-[-50%] md:translate-x-[0%] bg-gradient-to-r from-base-300 to-base-200 p-6">
       <div class="text-2xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-stone-700 to-primary mb-3">
         <p>Shop Unique</p> 
